--- a/style.css
+++ b/style.css
@@ -38,4 +38,12 @@ canvas {
     width: 50px;
     margin: .25rem;
     padding: .25rem;
+    cursor: pointer;
+}
+
+.toolbox > *:last-child {
+    margin-left: auto;
+}
+#size{
+    padding: 0;
 }
